<resources>
  <string name="app_name">凯帝斯</string>
  <string name="next">next</string>
  <string name="update">update</string>
  <string name="get_path">getPath</string>
  <string name="main_list">列表</string>
  <string name="chart">图表</string>
  <string name="setting">设置页</string>
  <string name="setting_detail">设置详情</string>
  <string name="commit">提交</string>
  <string name="start">开始</string>
  <string name="stop">结束</string>
  <string name="look">查看历史</string>
  <string name="setting_str">设置</string>
  <string name="model_setting">型号设置</string>
  <string name="system_param">系统参数</string>
  <string name="positive_no_load">正向空载</string>
  <string name="curve_parameter">曲线参数</string>
  <string name="Steel">钢性</string>
  <string name="process_standard">过程与标准</string>
  <string name="process_count_setting">加工计数设置</string>
  <string name="exit">退出</string>
  <string name="add">添加</string>
  <string name="delete">删除</string>
  <string name="use">应用</string>
  <string name="cancel">返回</string>
  <string name="sure">确认</string>
  <string name="process_setting">参数设置</string>
  <string name="steel_setting">钢性设置实验</string>
  <string name="positive_no_load_setting">正向空载参数设置</string>
  <string name="current_model">当前型号：%1$s</string>
</resources>
