<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <com.github.mikephil.charting.charts.LineChart
      android:id="@+id/lineChart1"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|bottom"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="20dp"
      android:text="@string/next"
      android:textSize="20sp"

      />
  <TextView
      android:id="@+id/update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginBottom="20dp"
      android:layout_marginStart="20dp"
      android:text="@string/update"
      android:textSize="20sp"

      />
  <TextView
      android:id="@+id/get_path"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:layout_marginStart="20dp"
      android:text="@string/get_path"
      android:textSize="20sp"

      />
</FrameLayout>