<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
  <com.example.ktsdemo.CustomTitleBar
      android:id="@+id/title_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="true"
      app:middleTextColor="@color/col_333333"
      app:middleTextSize="18sp"
      app:rightTextColor="@color/col_333333"
      app:rightTextSize="@dimen/s_14"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#e1e1e1"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:layout_marginTop="50dp"
      android:layout_gravity="bottom"
      android:layout_marginBottom="30dp"
      >
    <TextView
        android:id="@+id/model_setting"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/model_setting"
        android:textColor="@color/col_333333"
        android:background="@drawable/button_bg"
        android:textSize="18sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/system_param"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/positive_no_load"
        android:textColor="@color/col_333333"
        android:textSize="18sp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:layout_marginTop="50dp"
      android:layout_gravity="bottom"
      android:layout_marginBottom="30dp"
      >
    <TextView
        android:id="@+id/curve_parameter"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/Steel"
        android:textColor="@color/col_333333"
        android:background="@drawable/button_bg"
        android:textSize="18sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/process_standard"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/process_standard"
        android:textColor="@color/col_333333"
        android:textSize="18sp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:layout_marginTop="50dp"
      android:layout_gravity="bottom"
      android:layout_marginBottom="30dp"
      >
    <TextView
        android:id="@+id/process_count_setting"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/process_count_setting"
        android:textColor="@color/col_333333"
        android:background="@drawable/button_bg"
        android:textSize="18sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/selector_blue"
        android:gravity="center"
        />
  </LinearLayout>
</LinearLayout>