<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
  <ImageView
      android:id="@+id/image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="50dp"
      android:src="@drawable/button_top"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="150dp"
      android:layout_marginEnd="150dp"
      android:layout_gravity="bottom"
      android:layout_marginBottom="30dp"
      >
    <TextView
        android:id="@+id/detail"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/look"
        android:textColor="@color/col_333333"
        android:background="@drawable/corner_gray"
        android:textSize="18sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/start"
        android:textColor="@color/col_333333"
        android:textSize="18sp"
        android:background="@drawable/corner_gray"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent"
        android:text="@string/stop"
        android:textColor="@color/col_333333"
        android:textSize="18sp"
        android:background="@drawable/corner_gray"
        android:gravity="center"
        />

  </LinearLayout>
</FrameLayout>